# noctalia

./: .clang-tidy  CONTRIBUTING.md  CREDITS.md  PACKAGING.md  README.md  default.nix  example.toml  flake.nix  justfile  meson.build  meson_options.txt  noctalia.scm  template
.github/workflows/: ci.yml  mirror-codeberg.yml  release.yml  update-aur-package.yml
assets/: dev.noctalia.Noctalia.desktop  emoji.json
assets/templates/: builtin.toml
assets/translations/: be.json  ca.json  cs.json  de.json  en.json  es.json  fr.json  gl-ES.json  hu.json  it.json  (+10 more)
nix/: devshell.nix  nixos-module.nix  package.nix
src/: main.cpp
tests/: app_identity_test.cpp  audio_glyphs_test.cpp  calendar_cache_permissions_test.cpp  calendar_credential_store_test.cpp  clipboard_storage_permissions_test.cpp  config_path_resolution_test.cpp  config_schema_roundtrip_test.cpp  config_widget_test.cpp  desktop_entry_launch_test.cpp  google_client_calendar_list_test.cpp  hook_manager_test.cpp  i18n_supported_languages_test.cpp  ical_recurrence_test.cpp  ico_decoder_test.cpp  image_file_loader_data_uri_test.cpp  input_area_test.cpp  input_dispatcher_test.cpp  ipc_service_test.cpp  kde_color_scheme_test.cpp  math_provider_test.cpp  notification_history_utf8_test.cpp  plugin_bindings_test.cpp  plugin_git_export_test.cpp  plugin_i18n_test.cpp  plugin_manifest_test.cpp  plugin_source_paths_test.cpp  process_test.cpp  scheme_test.cpp  secret_store_test.cpp  security_primitives_test.cpp  time_format_test.cpp  ui_tree_reconciler_test.cpp  workspace_alert_service_test.cpp
tools/: notifications-test.sh
(+728 files in other folders)
